Se agrega pantalla preregistro cuentas, se ajusta numero de cuenta y se ajustan metodos